--- a/style.css
+++ b/style.css
@@ -54,3 +54,20 @@ h3{
     box-shadow: 5px 7px 40px grey;
     height: 80%;
 }
+#full-stack{
+    border-left: 7px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(180deg, salmon,tomato);
+}
+#baby-web{
+    border-left:7px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(180deg, blue, cyan);
+}
+footer p{
+    text-align: center;
+    color:black;
+}
+p{
+    color:gray;
+}
